# ztool

./: .gitignore  Cargo.toml  README.md  output.txt  rustfmt.toml  webgl_square.html
.cargo/: config.toml
ai_cli/: Cargo.toml
ai_cli/src/: error.rs  lib.rs  main.rs
ai_cli/src/chat/: anthropic.rs  mod.rs  ollama.rs  openai.rs  provider.rs
ai_cli/src/cli/: args.rs  mod.rs
ai_cli/src/config/: mod.rs  settings.rs
ai_cli/src/fetch/: browser.rs  extract.rs  http.rs  mod.rs
ai_cli/src/output/: format.rs  mod.rs
docs/notes/: 00-rust-knowledge-index.md  00-strings.md  01-arrays-vecs.md  04-error-handling.md  05-iterators.md  06-collections.md  07-type-system.md  08-generics.md  09-smart-pointers.md  10-macros.md  11-tuple-iterator.md  12-async-basics.md  13-async-closures.md  14-lifetimes.md  15-unsafe-programming.md  16-ffi.md  17-file-io.md  18-let-chains.md  19-conditional-compilation.md  20-macro-fragments.md  21-if-let-scope.md  23-precise-capturing.md  24-reserved-keywords.md  25-edition-2024-safety.md  26-latest-features.md
gui_tool/: Cargo.toml
gui_tool/examples/: triangle_shader.rs
gui_tool/src/: features.rs  main.rs  ui.rs
gui_tool/src/features/: json_fmt.rs  mod.rs  net_capture.rs  net_port_scan.rs  net_scan.rs  pyramid_3d.rs  theme.rs  ui_libs.rs
gui_tool/src/features/json_fmt/: mod.rs  update.rs  view.rs
gui_tool/src/features/net_capture/: mod.rs  parser.rs  update.rs  view.rs
gui_tool/src/features/net_port_scan/: scan.rs  update.rs  view.rs
gui_tool/src/features/net_scan/: mod.rs  update.rs  view.rs
gui_tool/src/features/pyramid_3d/: 3d渲染流程.md  scene.rs  update.rs  view.rs
gui_tool/src/features/pyramid_3d/scene/: camera.rs  pipeline.rs  primitive.rs  pyramid.wgsl
gui_tool/src/features/pyramid_3d/scene/pipeline/: buffer.rs  pyramid_shape.rs  uniforms.rs  vertex.rs
gui_tool/src/features/ui_libs/: lib.rs  update.rs  view.rs
gui_tool/src/ui/: app.rs  menu.rs  mod.rs  widgets.rs
gui_tool/src/ui/widgets/: menu_bar.rs  overlay.rs  toast.rs  tree_menu.rs
gui_tool/tests/: test_glam.rs
src/: init.rs  lib.rs  main.rs  netdump.rs
src/config/: log4rs.yaml
src/init/: init_log4rs.rs
src/mod01/: hosting.rs  serving.rs
src/netdump/: mod.rs
study_example/: Cargo.toml
study_example/docs/notes/: 00-rust-knowledge-index.md  00-strings.md  01-rust模块学习笔记.md  01-variables-types.md  02-control-flow.md  02-strings.md  03-ownership-borrowing.md  03-pattern-matching.md  04-arrays-vecs.md  05-rust模块学习笔记.md  06-collections.md  06-control-flow.md  07-structs-enums.md  07-type-system.md  08-pattern-matching.md  09-error-handling.md  09-smart-pointers.md  10-iterators.md  11-collections.md  12-type-system.md  13-async-closures.md  13-generics.md  14-lifetimes.md  15-smart-pointers.md  16-functions-closures.md  17-file-io.md  17-macros.md  18-let-chains.md  18-macro-fragments.md  19-tuple-iterator.md  20-async-basics.md  21-async-closures.md  22-concurrency.md  22-diagnostic-attributes.md  23-unsafe-programming.md  24-ffi.md  25-testing.md  26-file-io.md  27-comprehensive.md  27-conditional-compilation.md  (+9 more)
study_example/src/: lib.rs  main.rs  mod01.rs
study_example/src/init/: mod.rs
study_example/src/mod01/: hosting.rs  serving.rs
study_example/src/netdump/: httpdump.rs  mod.rs
study_example/tests/: demo.rs  rust_features.rs
study_example/tests/rust_features/: 00_strings.rs  01_variables_types.rs  02_control_flow.rs  02_strings.rs  03_ownership_borrowing.rs  04_arrays_and_vecs.rs  06_control_flow.rs  07_structs_enums.rs  08_pattern_matching.rs  09_error_handling_basics.rs  10_iterators.rs  11_collection_operations.rs  12_async_basics.rs  12_type_system.rs  13_generics.rs  14_lifetimes_and_rpit.rs  15_smart_pointers.rs  16_functions_closures.rs  17_macros.rs  18_macro_fragment_specifiers.rs  19_tuple_iterator.rs  20_async_basics.rs  20_macro_fragment_specifiers.rs  21_async_closures.rs  21_if_let_temporary_scope.rs  22_concurrency.rs  23_unsafe_programming.rs  24_ffi.rs  24_reserved_keywords.rs  25_testing.rs  26_file_and_io.rs  27_conditional_compilation.rs  28_let_chains.rs  29_if_let_temporary_scope.rs  30_diagnostic_attributes.rs  31_precise_capturing.rs  32_reserved_keywords.rs  33_edition_2024_safety.rs  34_latest_features_quick_ref.rs  35_comprehensive_tests.rs  (+1 more)
tests/: demo.rs
tests/rust_features/: 01_arrays_and_vecs.rs  03_pattern_matching.rs  04_error_handling_basics.rs  05_iterators.rs  06_collection_operations.rs  07_type_system.rs  08_generics.rs  09_smart_pointers.rs  10_macros.rs  11_tuple_iterator.rs  13_async_closures.rs  15_unsafe_programming.rs  16_ffi.rs  17_file_and_io.rs  18_let_chains.rs  19_conditional_compilation.rs  22_diagnostic_attributes.rs  23_precise_capturing.rs  25_edition_2024_safety.rs  26_latest_features_quick_ref.rs  27_comprehensive_tests.rs
