[package]
name = "ztool"
version = "1.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.24" }
tokio = { version = "1.48.0" }
tracing = { version = "0.1.43" }
# serde deps
serde = { version = "1.0.228" }
serde_json = { version = "1.0.145" }
serde_yml = "0.0.12"
humantime-serde = "1.1.1"
#rbatis deps
rbs = { version = "4.6.2" }
rbatis = { version = "4.6.13" }
rbdc-sqlite = { version = "4.6.2" }
sqlx = { version = "0.8.6" }
# log deps
log = { version = "0.4.22" }
log4rs = { version = "1.4.0" }

clap = { version = "4.5.53" }
hashbrown = { version = "0.16.1" }
itertools = { version = "0.14.0" }
futures = { version = "0.3.31" }
gat-std = "0.1.1"
pcap = { version = "2.4.0" }
pnet = "0.35.0"
anyhow = { version = "1.0.100" }
thiserror = { version = "2.0.17" }
byteorder = "1.5.0"
num = { version = "0.4.3" }
indexmap = { version = "2.12.1" }
rand = { version = "0.9.2" }
eframe = { version = "0.33.2" }
regex = { version = "1.12.2" }
chrono = { version = "0.4.42" }
base64 = "0.22.1"
tempfile = "3.23.0"
once_cell = "1.21.3"
toml = { version = "0.9.8" }
lazy_static = { version = "1.5.0" }
uuid = { version = "1.19.0" }
url = { version = "2.5.7" }
zerocopy = { version = "0.8.31" }
sysinfo = { version = "0.37.2" }
bigdecimal = { version = "0.4.9" }
fastnum = { version = "0.7.3" }
crossbeam = "0.8.4"
rust_decimal = "1.39.0"
csv = "1.4.0"
env_logger = "0.11.8"
libc = "0.2.178"
libc-interface = "0.1.2"
nix = "0.30.1"
winapi = "0.3.9"
rayon = "1.11.0"
image = "0.25.9"
futures-util = "0.3.31"
hex = "0.4.3"
http = "1.4.0"
cfg-if = "1.0.4"
tokio-util = "0.7.17"
windows-sys = "0.61.2"
zip = "6.0.0"
lru = "0.16.2"
rstest = "0.26.1"
backtrace = "0.3.76"
num-integer = "0.1.46"
tokio-test = "0.4.4"
futures-lite = "2.6.1"
async-channel = "2.5.0"
notify = "8.2.0"
flume = "0.11.1"
signal-hook = "0.3.18"
arbitrary = "1.4.2"
config = "0.15.19"
directories = "6.0.0"
time = "0.3.44"
fancy-regex = "0.16.2"
arrayvec = "0.7.6"
syn = "2.0.111"
quote = "1.0.42"
proc-macro2 = "1.0.103"
rustls = "0.23.35"
native-tls = "0.2.14"
indicatif = "0.18.3"
inquire = "0.9.1"
termcolor = "1.4.1"
walkdir = "2.5.0"
ignore = "0.4.25"
dashmap = "6.1.0"
num-bigint = "0.4.6"
polars = "0.52.0"
ndarray = "0.17.1"
pyo3 = "0.27.2"
fastrand = "2.3.0"
flate2 = "1.1.7"
ureq = "3.1.4"
slog = "2.8.2"
paste = "1.0.15"
bytemuck = "1.24.0"
windows = "0.62.2"
rustix = "1.1.2"
rsa = "0.9.9"
smol = "2.0.2"
futures-executor = "0.3.31"
async-trait = "0.1.89"
oracle = "0.6.3"
dirs = "6.0.0"
ratatui = "0.29.0"
hyper = "1.8.1"
actix = "0.13.5"
egui = "0.33.2"
egui_file = "0.24.0"
egui_table = "0.6.0"
egui_dnd = "0.14.0"
egui_animation = "0.10.0"
egui-file-dialog = "0.12.0"
egui_graphs = "0.29.0"
egui-toast = "0.19.1"
egui-modal = "0.6.0"
egui_logger = "0.9.0"
egui-dropdown = "0.13.0"
egui_code_editor = "0.2.20"
