[package]
name = "ztool"
version = "1.0.0"
edition = "2024"

[dependencies]
# 网络
hyper = "1.8.1"
hyper-util = { version = "0.1.5", features = ["tokio"] }
reqwest = { version = "0.12.26" }
pcap = { version = "2.4.0" ,features = ["capture-stream"]}
pnet = "0.35.0"

# 序列化
# serde deps
serde = { version = "1.0.228" }
serde_json = { version = "1.0.145" }
serde_yml = "0.0.12"
humantime-serde = "1.1.1"

# 日志
log = { version = "0.4.22" }
tracing = { version = "0.1.43" }

# 异步
tokio = "1.49.0"
tokio-util = "0.7.17"
tokio-test = "0.4.4"
futures = "0.3.31"
# 初学只用这个smol
smol = {version = "2.0.2"}

#数据库访问
sea-orm = {version="1.1.19"}

#错误处理
anyhow = { version = "1.0.100" }
thiserror = { version = "2.0.17" }

#工具库
itertools = { version = "0.14.0" }
num = { version = "0.4.3" }
indexmap = { version = "2.12.1" }
rand = { version = "0.8.5" }
regex = { version = "1.12.2" }
chrono = { version = "0.4.42" }
base64 = "0.22.1"
tempfile = "3.23.0"
once_cell = "1.21.3"

#其它未分类
clap = { version = "4.5.53" }

#可视化
eframe = { version = "0.33.2" }
egui = "0.33.2"

# 数学计算
nalgebra = "0.33"
rand_xoshiro = "0.8"
egui_file = "0.24.0"
egui_table = "0.6.0"
egui_dnd = "0.14.0"
egui_animation = "0.10.0"
egui-file-dialog = "0.12.0"
egui_graphs = "0.29.0"
egui-toast = "0.19.1"
egui-modal = "0.6.0"
egui_logger = "0.9.0"
egui-dropdown = "0.13.0"
egui_code_editor = "0.2.20"

# 配置管理
config = "0.15.19"                 # 多格式配置
toml = "0.8.11"                    # TOML 解析
cfg-if = "1.0.4"                   # 条件编译

byteorder = "1.5.0"
