[workspace]
resolver = "2"
members = ["study_example", "gui_tool"]

[workspace.package]
version = "1.0.0"
edition = "2024"

[workspace.dependencies]
hyper = "1.8.1"
hyper-util = { version = "0.1.5", features = ["tokio"] }
reqwest = "0.12.26"
pcap = { version = "2.4.0", features = ["capture-stream"] }
pnet = "0.35.0"

serde = "1.0.228"
serde_json = "1.0.145"
serde_yml = "0.0.12"
humantime-serde = "1.1.1"

log = "0.4.22"
tracing = "0.1.43"

tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.17"
tokio-test = "0.4.4"
futures = "0.3.31"
smol = "2.0.2"

sea-orm = "1.1.19"

anyhow = "1.0.100"
thiserror = "2.0.17"

itertools = "0.14.0"
num = "0.4.3"
indexmap = "2.12.1"
rand = "0.8.5"
regex = "1.12.2"
chrono = "0.4.42"
base64 = "0.22.1"
urlencoding = "2.1.3"
sysinfo = "0.33"
tempfile = "3.23.0"
once_cell = "1.21.3"

clap = "4.5.53"

nalgebra = "0.33"
rand_xoshiro = "0.8"

config = "0.15.19"
toml = "0.8.11"
cfg-if = "1.0.4"

byteorder = "1.5.0"

iced = { version = "^0.14", default-features = false, features = ["tiny-skia", "tokio"] }
iced_aw = "0.13.1"
iced_drop = "0.2.23"
native-theme-iced = "0.5.6"
iced_aksel = "0.3.0"
iced_modifier = "0.5.1"
iced_plot = "0.4.0"
iced_toaster = "0.2.0"
iced_plus = "0.1.0"
iconflow = "1.0.0"
iced_navigation = { version = "1.6.0", features = ["drawer"] }
iced_split = "0.1.0"
async-trait = "^0.1"
rayon = "1.10"

egui = "0.34.1"
eframe = { version = "0.34.1", features = ["wgpu", "default_fonts"] }
egui_file = "0.25"
egui_table = "0.8"
egui_dnd = "0.14.0"
egui_animation = "0.11"
egui-file-dialog = "0.13"
egui_graphs = "0.29.0"
egui_logger = "0.9.3"
egui-dropdown = "0.14"
egui_code_editor = "0.2.22"
