[package]
name = "study_example"
version.workspace = true
edition.workspace = true

[dependencies]
hyper.workspace = true
hyper-util.workspace = true
reqwest.workspace = true
pcap.workspace = true
pnet.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
humantime-serde.workspace = true

log.workspace = true
tracing.workspace = true

tokio.workspace = true
tokio-util.workspace = true
tokio-test.workspace = true
futures.workspace = true
smol.workspace = true

sea-orm.workspace = true

anyhow.workspace = true
thiserror.workspace = true

itertools.workspace = true
num.workspace = true
indexmap.workspace = true
rand.workspace = true
regex.workspace = true
chrono.workspace = true
base64.workspace = true
urlencoding.workspace = true
sysinfo.workspace = true
tempfile.workspace = true
once_cell.workspace = true

clap.workspace = true

eframe = { version = "0.34.1", features = ["wgpu", "default_fonts"] }
egui = "0.34.1"
wgpu = "29"

nalgebra.workspace = true
rand_xoshiro.workspace = true
egui_file = "0.25"
egui_table = "0.8"
egui_dnd = "0.14.0"
egui_animation = "0.11"
egui-file-dialog = "0.13"
egui_graphs = "0.29.0"
egui_logger = "0.9.3"
egui-dropdown = "0.14"
egui_code_editor = "0.2.22"

config.workspace = true
toml.workspace = true
cfg-if.workspace = true

byteorder.workspace = true