[package]
name = "study_example"
version.workspace = true
edition.workspace = true

[dependencies]
hyper.workspace = true
hyper-util.workspace = true
reqwest.workspace = true
pcap.workspace = true
pnet.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
humantime-serde.workspace = true

log.workspace = true
tracing.workspace = true

tokio.workspace = true
tokio-util.workspace = true
tokio-test.workspace = true
futures.workspace = true
smol.workspace = true

sea-orm.workspace = true

anyhow.workspace = true
thiserror.workspace = true

itertools.workspace = true
num.workspace = true
indexmap.workspace = true
rand.workspace = true
regex.workspace = true
chrono.workspace = true
base64.workspace = true
urlencoding.workspace = true
sysinfo.workspace = true
tempfile.workspace = true
once_cell.workspace = true

clap.workspace = true

iced.workspace = true

eframe.workspace = true
wgpu.workspace = true

nalgebra.workspace = true
rand_xoshiro.workspace = true
egui.workspace = true
egui_file.workspace = true
egui_table.workspace = true
egui_dnd.workspace = true
egui_animation.workspace = true
egui-file-dialog.workspace = true
egui_graphs.workspace = true
egui_logger.workspace = true
egui-dropdown.workspace = true
egui_code_editor.workspace = true

config.workspace = true
toml.workspace = true
cfg-if.workspace = true

byteorder.workspace = true
